--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
 
 	<!--  Lihat Penduduk Berdasarkan NIK -->
 	<div class="row">
-		<div class="col-lg-8 mb-4">
+		<div class="col-lg-5 mb-4">
 			<h5>Lihat Data Penduduk berdasarkan NIK</h5>
 			<form name="sentMessage" id="penduduk" action="/penduduk" method="get">
 				<div class="control-group form-group">
@@ -24,6 +24,20 @@
 					</div>
 				</div>
 				<button style="cursor:pointer;" type="submit" class="btn btn-primary">Lihat</button>
+			</form>
+		</div>
+		<div class="col-lg-2"></div>
+		<div class="col-lg-5 mb-4">
+			<h5>Edit Data Penduduk berdasarkan NIK</h5>
+			<form name="sentMessage" id="penduduk" th:action="@{/penduduk/ubah/}" method="get">
+				<div class="control-group form-group">
+					<div class="controls">
+						<label>Masukkan Nomor Induk Kependudukan</label> 
+						<input type="text" class="form-control" id="nik" name="nik" data-validation-required-message="Mohon masukkan NIK" required="true"/>
+						<p class="help-block"></p>
+					</div>
+				</div>
+				<button style="cursor:pointer;" type="submit" class="btn btn-info">Edit</button>
 			</form>
 		</div>
 	</div>
@@ -39,7 +53,7 @@
 				<div class="control-group form-group">
 					<div class="controls">
 						<label>Masukkan Nomor Kartu Keluarga</label> 
-						<input type="text" class="form-control" id="nomor_kk" name="nomor_kk" data-validation-required-message="Mohon masukkan NKK" required="true"/>
+						<input type="text" class="form-control" id="nkk" name="nkk" data-validation-required-message="Mohon masukkan NKK" required="true"/>
 						<p class="help-block"></p>
 					</div>
 				</div>
