--- a/source_code/src/main/resources/templates/penduduk/cari.html
+++ b/source_code/src/main/resources/templates/penduduk/cari.html
@@ -3,7 +3,7 @@
 	th:include="/layout/master :: master">
 
 <div th:fragment="content" class="container">
-	<h3 class="my-4" th:text="'Tambah Penduduk'">Tambah Penduduk</h3>
+	<h3 class="my-4" th:text="'Cari Penduduk'">Cari Penduduk</h3>
 	<!--  Cari Penduduk -->
 	<div class="row">
 		<div class="col-lg-8 mb-4">
@@ -13,7 +13,7 @@
 				<div class="form-group">
 					<label class="col-sm-2 control-label">Kota</label>
 					<div class="col-sm-10">
-						<select name="id_kota" onblur="selectKecamatan(this.value)" class="form-control">
+						<select name="kt" onblur="selectKecamatan(this.value)" class="form-control">
 							<option value="">Pilih Kota</option>
 							<div th:each="kota, iterationStatus: ${kotas}">
 								<option th:text="${kota.nama_kota}" th:value="${kota.id}"></option>
@@ -25,7 +25,7 @@
 				<div class="form-group">
 					<label class="col-sm-2 control-label">Kecamatan</label>
 					<div class="col-sm-10">
-						<select id="idSelectKecamatan" th:onblur="'selectKelurahan(this.value)'" name="id_kecamatan" class="form-control">
+						<select id="idSelectKecamatan" th:onblur="'selectKelurahan(this.value)'" name="kc" class="form-control">
 							<option value="0" >Pilih Kecamatan</option>
 						</select>
 					</div>
@@ -34,7 +34,7 @@
 				<div class="form-group">
 					<label class="col-sm-2 control-label">Kelurahan</label>
 					<div class="col-sm-10">
-						<select name="id_kelurahan" id="idSelectKelurahan" class="form-control">
+						<select name="kl" id="idSelectKelurahan" class="form-control">
 							<option value="0" >Pilih Kelurahan</option>
 						</select>
 					</div>
